[package]
name = "yadon"
version = "0.1.1"
edition = "2018"
authors = ["viv <dev@vvn.space>"]
license = "MIT OR Apache-2.0"
description = "`Write + Seek` which stores operations and can later apply them to another `Write + Seek`"
repository = "https://github.com/vivlim/yadon"

[dependencies]
thiserror = "1.0.29"